changed the tests to use more strict argument matchers